--- a/src/css/task-3.scss
+++ b/src/css/task-3.scss
@@ -8,4 +8,81 @@ body {
   background: aliceblue;
 }
 
+.container {
+  display: block;
+  margin: auto;
+  max-width: 980px;
+  padding: 0 20px;
+  .wrapper {
+    margin: 50px 0;
+    background: lightblue;
+    border-radius: 4px;
+    padding: 20px 0;
+    img {
+      max-width: 300px;
+      display: block;
+      margin: 0 auto 20px;
+    }
+    select {
+      width: 350px;
+      height: 40px;
+      border-radius: 4px;
+      font-size: 18px;
+      padding: 0 15px;
+      outline: none;
+      display: block;
+      margin: 0 auto;
+    }
+  }
+  .output {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    .block {
+      width: calc((100% / 2) - 15px);
+      border-radius: 4px;
+      background: lightblue;
+      margin-bottom: 30px;
+      padding: 15px;
+      box-sizing: border-box;
+      img {
+        max-width: 180px;
+        margin-bottom: 10px;
+      }
+      p {
+        font-size: 16px;
+        line-height: 22px;
+        margin-bottom: 10px;
+        span {
+          font-weight: 700;
+        }
+        &:nth-last-child(1) {
+          margin-bottom: 0;
+        }
+      }
+    }
+  }
+}
 
+@media (max-width: 600px) {
+  .container {
+    .wrapper {
+      margin-top: 20px;
+      padding: 20px;
+      box-sizing: border-box;
+      img {
+        max-width: 200px;
+        margin-bottom: 10px;
+      }
+      select {
+        width: 100%;
+      }
+    }
+    .output {
+      .block {
+        width: 100%;
+
+      }
+    }
+  }
+}
